--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         .header {
             background: var(--card-bg);
             padding: 20px 24px 24px;
-            padding-top: max(env(safe-area-inset-top, 20px), 20px);
+            padding-top: max(env(safe-area-inset-top, 50px), 50px);
             position: sticky;
             top: 0;
             z-index: 100;
@@ -119,12 +119,12 @@
             flex: 1;
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
-            padding-bottom: calc(90px + env(safe-area-inset-bottom));
+            padding-bottom: calc(110px + env(safe-area-inset-bottom));
         }
 
         .fab {
             position: fixed;
-            bottom: calc(90px + env(safe-area-inset-bottom));
+            bottom: calc(110px + env(safe-area-inset-bottom));
             right: 24px;
             width: 60px;
             height: 60px;
@@ -1118,14 +1118,14 @@
     </div>
 
     <script>
-        // Firebase Configuration
+        // Firebase Configuration - REPLACE WITH YOUR CONFIG
         const firebaseConfig = {
-            apiKey: "AIzaSyCz5GKCJfazH9e-4z4X5QNd4o9BZV8gMoU",
-            authDomain: "dul-accounts.firebaseapp.com",
-            projectId: "dul-accounts",
-            storageBucket: "dul-accounts.firebasestorage.app",
-            messagingSenderId: "508206162333",
-            appId: "1:508206162333:web:8fe26acd229aea1a93cf74"
+            apiKey: "YOUR_API_KEY",
+            authDomain: "your-project.firebaseapp.com",
+            projectId: "your-project-id",
+            storageBucket: "your-project.appspot.com",
+            messagingSenderId: "123456789",
+            appId: "your-app-id"
         };
 
         // Initialize Firebase
