--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
         .header {
             background: var(--card-bg);
-            padding: env(safe-area-inset-top, 44px) 24px 24px;
-            padding-top: calc(env(safe-area-inset-top, 0px) + 44px);
+            padding: calc(env(safe-area-inset-top, 0px) + 16px) 24px 24px;
             position: relative;
             z-index: 100;
             backdrop-filter: blur(20px) saturate(180%);
@@ -121,6 +120,7 @@
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
             padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 90px);
+            min-height: 0;
         }
 
         .fab {
@@ -384,8 +384,7 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 8px 0 env(safe-area-inset-bottom, 8px);
-            padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 8px);
+            padding: 8px 0 calc(env(safe-area-inset-bottom, 0px) + 8px);
             display: flex;
             justify-content: space-around;
             z-index: 1000;
@@ -480,8 +479,7 @@
         .modal-content {
             background: var(--card-bg);
             border-radius: 24px 24px 0 0;
-            padding: 32px 24px;
-            padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 32px);
+            padding: 32px 24px calc(env(safe-area-inset-bottom, 0px) + 32px);
             width: 100%;
             max-height: 90vh;
             overflow-y: auto;
@@ -634,10 +632,14 @@
 
         .view {
             display: none !important;
+            flex: 1;
+            min-height: 0;
+            display: flex;
+            flex-direction: column;
         }
 
         .view.active {
-            display: block !important;
+            display: flex !important;
         }
 
         .loading-overlay {
@@ -1119,6 +1121,7 @@
     </div>
 
     <script>
+        // [All your existing JavaScript code remains exactly the same]
         // Firebase Configuration
         const firebaseConfig = {
             apiKey: "AIzaSyCz5GKCJfazH9e-4z4X5QNd4o9BZV8gMoU",
