--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 8px 0 env(safe-area-inset-bottom, 8px);
+            padding: 4px 0 env(safe-area-inset-bottom, 8px);
             display: flex;
             justify-content: space-around;
             z-index: 1000;
@@ -402,7 +402,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 6px 12px;
+            padding: 4px 12px;
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
@@ -430,7 +430,7 @@
         .nav-item .icon {
             width: 24px;
             height: 24px;
-            margin-bottom: 3px;
+            margin-bottom: 2px;
             transition: transform 0.2s;
         }
 
@@ -445,7 +445,7 @@
 
         .nav-item .badge {
             position: absolute;
-            top: 2px;
+            top: 0;
             right: 50%;
             margin-right: -18px;
             background: linear-gradient(135deg, var(--danger) 0%, #DC3545 100%);
@@ -759,7 +759,7 @@
             animation: fadeIn 0.3s;
             align-items: center;
             justify-content: center;
-            padding: 20px;
+            padding: calc(env(safe-area-inset-top, 0px) + 20px) 20px calc(env(safe-area-inset-bottom, 0px) + 20px);
         }
 
         .image-modal.active {
@@ -769,7 +769,7 @@
         .image-modal-content {
             position: relative;
             max-width: 90vw;
-            max-height: 90vh;
+            max-height: 85vh;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -777,7 +777,7 @@
 
         .image-modal img {
             max-width: 100%;
-            max-height: 85vh;
+            max-height: 70vh;
             object-fit: contain;
             border-radius: 12px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
@@ -866,7 +866,6 @@
 </head>
 <body>
     <div class="app-container">
-        <!-- Sync Status -->
         <div id="syncStatus" class="sync-status offline">
             <div class="sync-dot"></div>
             <span>Offline</span>
@@ -1060,7 +1059,6 @@
             </div>
         </div>
 
-        <!-- Image Modal -->
         <div id="imageModal" class="image-modal">
             <div class="image-modal-content">
                 <div class="image-modal-header">
@@ -1121,8 +1119,6 @@
     </div>
 
     <script>
-        // [All your existing JavaScript code remains exactly the same]
-        // Firebase Configuration
         const firebaseConfig = {
             apiKey: "AIzaSyCz5GKCJfazH9e-4z4X5QNd4o9BZV8gMoU",
             authDomain: "dul-accounts.firebaseapp.com",
