--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 8px 0 max(env(safe-area-inset-bottom), 4px);
+            padding: 8px 0 4px 0;
             display: flex;
             justify-content: space-around;
             z-index: 1000;
