--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 6px 0 2px 0;
+            padding: 8px 0 0 0;
             display: flex;
             justify-content: space-around;
             z-index: 1000;
