--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 8px 0 0 0;
+            padding: 6px 0 2px 0;
             display: flex;
             justify-content: space-around;
             z-index: 1000;
@@ -402,7 +402,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 6px 12px;
+            padding: 6px 12px 3px 12px;
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
