--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 6px 0 2px 0;
+            padding: 6px 0 0 0;
             display: flex;
             justify-content: space-around;
             z-index: 1000;
@@ -441,6 +441,7 @@
         .nav-item .label {
             font-size: 10px;
             font-weight: 600;
+            line-height: 1;
         }
 
         .nav-item .badge {
