--- a/index.html
+++ b/index.html
@@ -416,15 +416,7 @@
         }
 
         .nav-item.active::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 32px;
-            height: 3px;
-            background: linear-gradient(90deg, var(--primary) 0%, var(--primary-dark) 100%);
-            border-radius: 0 0 3px 3px;
+            display: none;
         }
 
         .nav-item .icon {
