--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 4px 12px;
+            padding: 4px 12px 0px 12px;  /* top: 4px, right: 12px, bottom: 0px, left: 12px */
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
