--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
             padding: 10px 0 0 0;
+            padding-bottom: 0 !important;
+            margin-bottom: 0 !important;
             display: flex;
             justify-content: space-around;
             z-index: 1000;
