--- a/index.html
+++ b/index.html
@@ -405,6 +405,8 @@
             flex-direction: column;
             align-items: center;
             padding: 4px 12px 0 12px;
+            padding-bottom: 0 !important;
+            margin-bottom: 0 !important;
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
