--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             background: var(--background);
             color: var(--text-primary);
             height: 100vh;
+            height: 100dvh;
             height: -webkit-fill-available;
             overflow: hidden;
             position: relative;
