--- a/index.html
+++ b/index.html
@@ -382,13 +382,10 @@
             left: 0;
             right: 0;
             background: rgba(28, 28, 30, 0.95);
-            background: red !important;
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 10px 0 0 0;
-            padding-bottom: 0 !important;
-            margin-bottom: 0 !important;
+            padding: 8px 0 8px 0; /* Changed: 10px top to 8px, added 8px bottom */
             display: flex;
             justify-content: space-around;
             z-index: 1000;
@@ -406,9 +403,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 4px 12px 0 12px;
-            padding-bottom: 0 !important;
-            margin-bottom: 0 !important;
+            padding: 0 12px; /* Removed top/bottom padding, just horizontal */
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
