--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <script src='https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js'></script>
     <style>
         * {
+            outline: 1px solid blue !important; /* Shows boundaries of ALL elements */
+        }
+        
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
