--- a/index.html
+++ b/index.html
@@ -389,11 +389,12 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 0; /* Remove ALL padding */
+            padding: 0;
+            padding-bottom: env(safe-area-inset-bottom); /* ADD THIS LINE */
             display: flex;
             justify-content: space-around;
-            align-items: center; /* Center items vertically */
-            height: 60px; /* Fixed height */
+            align-items: center;
+            height: 60px;
             z-index: 1000;
             box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.1);
             flex-shrink: 0;
