--- a/index.html
+++ b/index.html
@@ -390,11 +390,11 @@
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
             padding: 0;
-            padding-bottom: env(safe-area-inset-bottom); /* ADD THIS LINE */
+            padding-bottom: env(safe-area-inset-bottom);
             display: flex;
             justify-content: space-around;
-            align-items: center;
-            height: 60px;
+            align-items: flex-start; /* Changed from center to flex-start */
+            height: calc(60px + env(safe-area-inset-bottom)); /* Add safe area to height */
             z-index: 1000;
             box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.1);
             flex-shrink: 0;
@@ -411,14 +411,14 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 8px 12px; /* Small even padding all around */
+            padding: 8px 12px;
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
             flex: 1;
             max-width: 80px;
             position: relative;
-            height: 100%; /* Fill the nav bar height */
+            height: 60px; /* Fixed height for nav items only */
         }
 
         .nav-item.active {
