--- a/index.html
+++ b/index.html
@@ -389,15 +389,11 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 0;
-            padding-bottom: env(safe-area-inset-bottom);
+            padding: 10px 0 env(safe-area-inset-bottom) 0;
             display: flex;
             justify-content: space-around;
-            align-items: flex-start; /* Changed from center to flex-start */
-            height: calc(60px + env(safe-area-inset-bottom)); /* Add safe area to height */
             z-index: 1000;
             box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.1);
-            flex-shrink: 0;
         }
 
         @media (prefers-color-scheme: light) {
