--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
     <script src='https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js'></script>
     <style>
         * {
-            outline: 1px solid blue !important; /* Shows boundaries of ALL elements */
-        }
-        
-        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -389,11 +385,12 @@
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 10px 0 env(safe-area-inset-bottom) 0;
+            padding: 8px 0 calc(env(safe-area-inset-bottom, 0px) + 8px) 0;
             display: flex;
             justify-content: space-around;
             z-index: 1000;
             box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.1);
+            flex-shrink: 0;
         }
 
         @media (prefers-color-scheme: light) {
@@ -406,15 +403,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            padding: 8px 12px;
+            padding: 4px 12px;
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
             flex: 1;
             max-width: 80px;
             position: relative;
-            height: 60px; /* Fixed height for nav items only */
         }
 
         .nav-item.active {
