--- a/index.html
+++ b/index.html
@@ -382,10 +382,13 @@
             left: 0;
             right: 0;
             background: rgba(28, 28, 30, 0.95);
+            background: red !important;
             backdrop-filter: blur(20px) saturate(180%);
             -webkit-backdrop-filter: blur(20px) saturate(180%);
             border-top: 0.5px solid var(--border);
-            padding: 8px 0 calc(env(safe-area-inset-bottom, 0px) + 8px) 0;
+            padding: 10px 0 0 0;
+            padding-bottom: 0 !important;
+            margin-bottom: 0 !important;
             display: flex;
             justify-content: space-around;
             z-index: 1000;
@@ -403,7 +406,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 4px 12px;
+            padding: 4px 12px 0 12px;
+            padding-bottom: 0 !important;
+            margin-bottom: 0 !important;
             cursor: pointer;
             color: var(--text-secondary);
             transition: all 0.3s;
