--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
         .payment-card.status-sent,
         .payment-card.status-in-pot {
             background: var(--card-bg) !important;
+            border: 1px solid var(--border) !important;
         }
 
         .payment-card::before {
