--- a/index.html
+++ b/index.html
@@ -280,6 +280,14 @@
             gap: 12px;
         }
 
+        .payment-card .payment-title {
+            color: var(--text-primary) !important;
+        }
+
+        .payment-card .payment-amount {
+            color: var(--text-primary) !important;
+        }
+
         .payment-title {
             font-size: 14px;
             font-weight: 600;
